// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tabs > renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: scroll;
  position: relative;
  z-index: 0;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.emotion-0::after {
  z-index: -1;
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 2px;
  background: #d9dadd;
}

.emotion-0::-webkit-scrollbar {
  display: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      role="tablist"
    />
  </div>
</DocumentFragment>
`;

exports[`tabs > renders correctly with Tabs and last disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: scroll;
  position: relative;
  z-index: 0;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.emotion-0::after {
  z-index: -1;
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 2px;
  background: #d9dadd;
}

.emotion-0::-webkit-scrollbar {
  display: none;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: scroll;
  position: relative;
  z-index: 0;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.emotion-0::after {
  z-index: -1;
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 2px;
  background: #d9dadd;
}

.emotion-0::-webkit-scrollbar {
  display: none;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0.5rem 1rem;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  white-space: nowrap;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
}

.emotion-2:hover,
.emotion-2:active,
.emotion-2:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.emotion-2:focus-visible {
  outline: auto;
}

.emotion-2[aria-selected='true'] {
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.emotion-2[aria-selected='true'] .e1hzf7cr3 {
  color: #641cb3;
}

.emotion-2[aria-disabled='false']:not(:disabled):hover,
.emotion-2[aria-disabled='false']:not(:disabled):focus,
.emotion-2[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.emotion-2[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr4,
.emotion-2[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr4,
.emotion-2[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr4 {
  background-color: #f1eefc;
  border-color: #f1eefc;
  color: #641cb3;
}

.emotion-2[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr3,
.emotion-2[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr3,
.emotion-2[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr3 {
  color: #641cb3;
}

.emotion-2[aria-disabled='true'],
.emotion-2:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0.5rem 1rem;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  white-space: nowrap;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
}

.emotion-2:hover,
.emotion-2:active,
.emotion-2:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.emotion-2:focus-visible {
  outline: auto;
}

.emotion-2[aria-selected='true'] {
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.emotion-2[aria-selected='true'] .e1hzf7cr3 {
  color: #641cb3;
}

.emotion-2[aria-disabled='false']:not(:disabled):hover,
.emotion-2[aria-disabled='false']:not(:disabled):focus,
.emotion-2[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.emotion-2[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr4,
.emotion-2[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr4,
.emotion-2[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr4 {
  background-color: #f1eefc;
  border-color: #f1eefc;
  color: #641cb3;
}

.emotion-2[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr3,
.emotion-2[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr3,
.emotion-2[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr3 {
  color: #641cb3;
}

.emotion-2[aria-disabled='true'],
.emotion-2:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      role="tablist"
    >
      <button
        aria-disabled="false"
        aria-selected="false"
        class="emotion-2 emotion-3"
        data-is-selected="false"
        role="tab"
        type="button"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-5"
          >
            First
          </div>
        </div>
      </button>
      <button
        aria-disabled="false"
        aria-label="1"
        aria-selected="false"
        class="emotion-2 emotion-3"
        data-is-selected="false"
        role="tab"
        type="button"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-5"
          >
            Second
          </div>
        </div>
      </button>
      <button
        aria-disabled="true"
        aria-label="2"
        aria-selected="true"
        class="emotion-2 emotion-3"
        data-is-selected="true"
        disabled=""
        role="tab"
        type="button"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-5"
          >
            Very long tab name
          </div>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tabs > renders correctly with Tabs menu selected 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: scroll;
  position: relative;
  z-index: 0;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.emotion-0::after {
  z-index: -1;
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 2px;
  background: #d9dadd;
}

.emotion-0::-webkit-scrollbar {
  display: none;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0.5rem 1rem;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  white-space: nowrap;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
}

.emotion-2:hover,
.emotion-2:active,
.emotion-2:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.emotion-2:focus-visible {
  outline: auto;
}

.emotion-2[aria-selected='true'] {
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.emotion-2[aria-selected='true'] .e1hzf7cr3 {
  color: #641cb3;
}

.emotion-2[aria-disabled='false']:not(:disabled):hover,
.emotion-2[aria-disabled='false']:not(:disabled):focus,
.emotion-2[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.emotion-2[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr4,
.emotion-2[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr4,
.emotion-2[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr4 {
  background-color: #f1eefc;
  border-color: #f1eefc;
  color: #641cb3;
}

.emotion-2[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr3,
.emotion-2[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr3,
.emotion-2[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr3 {
  color: #641cb3;
}

.emotion-2[aria-disabled='true'],
.emotion-2:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  bottom: 0;
  right: 0;
}

.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0.5rem 1rem;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  white-space: nowrap;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
}

.emotion-22:hover,
.emotion-22:active,
.emotion-22:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.emotion-22:focus-visible {
  outline: auto;
}

.emotion-22[aria-selected='true'] {
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.emotion-22[aria-selected='true'] .e1hzf7cr3 {
  color: #641cb3;
}

.emotion-22[aria-disabled='false']:not(:disabled):hover,
.emotion-22[aria-disabled='false']:not(:disabled):focus,
.emotion-22[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.emotion-22[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr4,
.emotion-22[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr4,
.emotion-22[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr4 {
  background-color: #f1eefc;
  border-color: #f1eefc;
  color: #641cb3;
}

.emotion-22[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr3,
.emotion-22[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr3,
.emotion-22[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr3 {
  color: #641cb3;
}

.emotion-22[aria-disabled='true'],
.emotion-22:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.emotion-22 .emotion-25 {
  color: inherit;
  margin-left: 0.5rem;
  -webkit-transition: 300ms -webkit-transform ease-out;
  transition: 300ms transform ease-out;
}

.emotion-22[aria-expanded='true'] .emotion-25 {
  -webkit-transform: rotate(-180deg);
  -moz-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      role="tablist"
    >
      <button
        aria-disabled="false"
        aria-selected="false"
        class="emotion-2 emotion-3"
        data-is-selected="false"
        role="tab"
        type="button"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-5"
          >
            First
          </div>
        </div>
      </button>
      <button
        aria-disabled="false"
        aria-label="1"
        aria-selected="false"
        class="emotion-2 emotion-3"
        data-is-selected="false"
        role="tab"
        type="button"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-5"
          >
            Second
          </div>
        </div>
      </button>
      <button
        aria-disabled="false"
        aria-label="2"
        aria-selected="false"
        class="emotion-2 emotion-3"
        data-is-selected="false"
        role="tab"
        type="button"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-5"
          >
            Very long tab name
          </div>
        </div>
      </button>
      <div
        class="emotion-20 emotion-21"
      >
        <div
          aria-controls="menu-test"
          aria-describedby="menu-test"
          class="styles__w40vpo9"
          tabindex="-1"
        >
          <button
            aria-disabled="false"
            aria-expanded="true"
            aria-haspopup="dialog"
            class="emotion-22 emotion-23"
            role="tab"
            type="button"
          >
            More
            <svg
              class="emotion-24 emotion-25 styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="emotion-20 emotion-21"
      >
        <div
          aria-controls="menu-«r1r»"
          aria-describedby="menu-«r1r»"
          class="styles__w40vpo9"
          tabindex="-1"
        >
          <button
            aria-disabled="true"
            aria-expanded="false"
            aria-haspopup="dialog"
            class="emotion-22 emotion-23"
            disabled=""
            role="tab"
            type="button"
          >
            More again
            <svg
              class="emotion-24 emotion-25 styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tabs > renders correctly with Tabs name 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: scroll;
  position: relative;
  z-index: 0;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.emotion-0::after {
  z-index: -1;
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 2px;
  background: #d9dadd;
}

.emotion-0::-webkit-scrollbar {
  display: none;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: scroll;
  position: relative;
  z-index: 0;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.emotion-0::after {
  z-index: -1;
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 2px;
  background: #d9dadd;
}

.emotion-0::-webkit-scrollbar {
  display: none;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0.5rem 1rem;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  white-space: nowrap;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
}

.emotion-2:hover,
.emotion-2:active,
.emotion-2:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.emotion-2:focus-visible {
  outline: auto;
}

.emotion-2[aria-selected='true'] {
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.emotion-2[aria-selected='true'] .e1hzf7cr3 {
  color: #641cb3;
}

.emotion-2[aria-disabled='false']:not(:disabled):hover,
.emotion-2[aria-disabled='false']:not(:disabled):focus,
.emotion-2[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.emotion-2[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr4,
.emotion-2[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr4,
.emotion-2[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr4 {
  background-color: #f1eefc;
  border-color: #f1eefc;
  color: #641cb3;
}

.emotion-2[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr3,
.emotion-2[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr3,
.emotion-2[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr3 {
  color: #641cb3;
}

.emotion-2[aria-disabled='true'],
.emotion-2:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0.5rem 1rem;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  white-space: nowrap;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
}

.emotion-2:hover,
.emotion-2:active,
.emotion-2:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.emotion-2:focus-visible {
  outline: auto;
}

.emotion-2[aria-selected='true'] {
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.emotion-2[aria-selected='true'] .e1hzf7cr3 {
  color: #641cb3;
}

.emotion-2[aria-disabled='false']:not(:disabled):hover,
.emotion-2[aria-disabled='false']:not(:disabled):focus,
.emotion-2[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.emotion-2[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr4,
.emotion-2[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr4,
.emotion-2[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr4 {
  background-color: #f1eefc;
  border-color: #f1eefc;
  color: #641cb3;
}

.emotion-2[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr3,
.emotion-2[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr3,
.emotion-2[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr3 {
  color: #641cb3;
}

.emotion-2[aria-disabled='true'],
.emotion-2:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      role="tablist"
    >
      <button
        aria-disabled="false"
        aria-label="first"
        aria-selected="false"
        class="emotion-2 emotion-3"
        data-is-selected="false"
        role="tab"
        type="button"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-5"
          >
            First
          </div>
        </div>
      </button>
      <button
        aria-disabled="false"
        aria-label="second"
        aria-selected="true"
        class="emotion-2 emotion-3"
        data-is-selected="true"
        role="tab"
        type="button"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-5"
          >
            Second
          </div>
        </div>
      </button>
      <button
        aria-disabled="true"
        aria-label="three"
        aria-selected="false"
        class="emotion-2 emotion-3"
        data-is-selected="false"
        disabled=""
        role="tab"
        type="button"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-5"
          >
            Very long tab name
          </div>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tabs > renders correctly with Tabs with prop 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: scroll;
  position: relative;
  z-index: 0;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.emotion-0::after {
  z-index: -1;
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 2px;
  background: #d9dadd;
}

.emotion-0::-webkit-scrollbar {
  display: none;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0.5rem 1rem;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  white-space: nowrap;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
}

.emotion-2:hover,
.emotion-2:active,
.emotion-2:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.emotion-2:focus-visible {
  outline: auto;
}

.emotion-2[aria-selected='true'] {
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.emotion-2[aria-selected='true'] .e1hzf7cr3 {
  color: #641cb3;
}

.emotion-2[aria-disabled='false']:not(:disabled):hover,
.emotion-2[aria-disabled='false']:not(:disabled):focus,
.emotion-2[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.emotion-2[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .emotion-9,
.emotion-2[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .emotion-9,
.emotion-2[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .emotion-9 {
  background-color: #f1eefc;
  border-color: #f1eefc;
  color: #641cb3;
}

.emotion-2[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr3,
.emotion-2[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr3,
.emotion-2[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr3 {
  color: #641cb3;
}

.emotion-2[aria-disabled='true'],
.emotion-2:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-8 {
  padding: 0 0.5rem;
  margin-left: 0.5rem;
}

.emotion-46 {
  margin-left: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-122 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  bottom: 0;
  right: 0;
}

.emotion-124 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0.5rem 1rem;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  white-space: nowrap;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
}

.emotion-124:hover,
.emotion-124:active,
.emotion-124:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.emotion-124:focus-visible {
  outline: auto;
}

.emotion-124[aria-selected='true'] {
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.emotion-124[aria-selected='true'] .e1hzf7cr3 {
  color: #641cb3;
}

.emotion-124[aria-disabled='false']:not(:disabled):hover,
.emotion-124[aria-disabled='false']:not(:disabled):focus,
.emotion-124[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.emotion-124[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .emotion-9,
.emotion-124[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .emotion-9,
.emotion-124[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .emotion-9 {
  background-color: #f1eefc;
  border-color: #f1eefc;
  color: #641cb3;
}

.emotion-124[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr3,
.emotion-124[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr3,
.emotion-124[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr3 {
  color: #641cb3;
}

.emotion-124[aria-disabled='true'],
.emotion-124:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.emotion-124 .emotion-127 {
  color: inherit;
  margin-left: 0.5rem;
  -webkit-transition: 300ms -webkit-transform ease-out;
  transition: 300ms transform ease-out;
}

.emotion-124[aria-expanded='true'] .emotion-127 {
  -webkit-transform: rotate(-180deg);
  -moz-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-131 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0.5rem 1rem;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  white-space: nowrap;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  position: -webkit-sticky;
  position: sticky;
  right: 0;
  top: 0;
  bottom: 0;
  background: #ffffff;
  box-shadow: 0px 0px 24px 6px #d9dadd66;
}

.emotion-131:hover,
.emotion-131:active,
.emotion-131:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.emotion-131:focus-visible {
  outline: auto;
}

.emotion-131[aria-selected='true'] {
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.emotion-131[aria-selected='true'] .e1hzf7cr3 {
  color: #641cb3;
}

.emotion-131[aria-disabled='false']:not(:disabled):hover,
.emotion-131[aria-disabled='false']:not(:disabled):focus,
.emotion-131[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.emotion-131[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .emotion-9,
.emotion-131[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .emotion-9,
.emotion-131[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .emotion-9 {
  background-color: #f1eefc;
  border-color: #f1eefc;
  color: #641cb3;
}

.emotion-131[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr3,
.emotion-131[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr3,
.emotion-131[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr3 {
  color: #641cb3;
}

.emotion-131[aria-disabled='true'],
.emotion-131:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.emotion-131 .emotion-127 {
  color: inherit;
  margin-left: 0.5rem;
  -webkit-transition: 300ms -webkit-transform ease-out;
  transition: 300ms transform ease-out;
}

.emotion-131[aria-expanded='true'] .emotion-127 {
  -webkit-transform: rotate(-180deg);
  -moz-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      role="tablist"
    >
      <button
        aria-disabled="false"
        aria-selected="true"
        class="emotion-2 emotion-3"
        data-is-selected="true"
        role="tab"
        type="button"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-5"
          >
            First
            <span
              class="emotion-8 emotion-9 styles__1yf71jy0 styles_size_medium__1yf71jy2 styles_prominence_strong__1yf71jye styles_sentiment_primary__1yf71jy4 styles_undefined_compound_7__1yf71jyn style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
              style="--qabug41: nowrap;"
            >
              2
            </span>
          </div>
        </div>
      </button>
      <button
        aria-disabled="false"
        aria-label="1"
        aria-selected="false"
        class="emotion-2 emotion-3"
        data-is-selected="false"
        role="tab"
        type="button"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-5"
          >
            Second
          </div>
        </div>
      </button>
      <button
        aria-disabled="false"
        aria-selected="false"
        class="emotion-2 emotion-3"
        data-is-selected="false"
        role="tab"
        type="button"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-5"
          >
            Undefined
          </div>
        </div>
      </button>
      <button
        aria-disabled="false"
        aria-selected="false"
        class="emotion-2 emotion-3"
        data-is-selected="false"
        role="tab"
        type="button"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-5"
          >
            Counter
            <span
              class="emotion-8 emotion-9 styles__1yf71jy0 styles_size_medium__1yf71jy2 styles_prominence_default__1yf71jyd styles_sentiment_neutral__1yf71jya styles_undefined_compound_6__1yf71jym style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
              style="--qabug41: nowrap;"
            >
              12
            </span>
          </div>
        </div>
      </button>
      <button
        aria-disabled="false"
        aria-label="2"
        aria-selected="false"
        class="emotion-2 emotion-3"
        data-is-selected="false"
        role="tab"
        type="button"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-5"
          >
            Counter no items
            <span
              class="emotion-8 emotion-9 styles__1yf71jy0 styles_size_medium__1yf71jy2 styles_prominence_default__1yf71jyd styles_sentiment_neutral__1yf71jya styles_undefined_compound_6__1yf71jym style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
              style="--qabug41: nowrap;"
            >
              0
            </span>
          </div>
        </div>
      </button>
      <button
        aria-disabled="false"
        aria-selected="false"
        class="emotion-2 emotion-3"
        data-is-selected="false"
        role="tab"
        type="button"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-5"
          >
            Conter and badge
            <span
              class="emotion-8 emotion-9 styles__1yf71jy0 styles_size_medium__1yf71jy2 styles_prominence_default__1yf71jyd styles_sentiment_neutral__1yf71jya styles_undefined_compound_6__1yf71jym style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
              style="--qabug41: nowrap;"
            >
              12
            </span>
            <span
              class="emotion-46 emotion-47"
            >
              Badge
            </span>
          </div>
        </div>
      </button>
      <button
        aria-disabled="false"
        aria-selected="false"
        class="emotion-2 emotion-3"
        data-is-selected="false"
        role="tab"
        type="button"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-5"
          >
            Badge
            <span
              class="emotion-46 emotion-47"
            >
              Badge
            </span>
          </div>
        </div>
      </button>
      <button
        aria-disabled="false"
        aria-selected="false"
        class="emotion-2 emotion-3"
        data-is-selected="false"
        role="tab"
        type="button"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-5"
          >
            Very long tab name
          </div>
        </div>
      </button>
      <button
        aria-disabled="false"
        aria-selected="false"
        class="emotion-2 emotion-3"
        data-is-selected="false"
        role="tab"
        type="button"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-5"
          >
            Very long tab name
          </div>
        </div>
      </button>
      <button
        aria-disabled="false"
        aria-selected="false"
        class="emotion-2 emotion-3"
        data-is-selected="false"
        role="tab"
        type="button"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-5"
          >
            Very long tab name
          </div>
        </div>
      </button>
      <button
        aria-disabled="false"
        aria-selected="false"
        class="emotion-2 emotion-3"
        data-is-selected="false"
        role="tab"
        type="button"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-5"
          >
            Very long tab name
          </div>
        </div>
      </button>
      <button
        aria-disabled="false"
        aria-selected="false"
        class="emotion-2 emotion-3"
        data-is-selected="false"
        role="tab"
        type="button"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-5"
          >
            Very long tab name
          </div>
        </div>
      </button>
      <button
        aria-disabled="false"
        aria-selected="false"
        class="emotion-2 emotion-3"
        data-is-selected="false"
        role="tab"
        type="button"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-5"
          >
            Very long tab name
          </div>
        </div>
      </button>
      <button
        aria-disabled="false"
        aria-selected="false"
        class="emotion-2 emotion-3"
        data-is-selected="false"
        role="tab"
        type="button"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-5"
          >
            Very long tab name
          </div>
        </div>
      </button>
      <button
        aria-disabled="false"
        aria-selected="false"
        class="emotion-2 emotion-3"
        data-is-selected="false"
        role="tab"
        type="button"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-5"
          >
            Very long tab name
          </div>
        </div>
      </button>
      <button
        aria-disabled="false"
        aria-selected="false"
        class="emotion-2 emotion-3"
        data-is-selected="false"
        role="tab"
        type="button"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-5"
          >
            Very long tab name
          </div>
        </div>
      </button>
      <button
        aria-disabled="false"
        aria-selected="false"
        class="emotion-2 emotion-3"
        data-is-selected="false"
        role="tab"
        type="button"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-5"
          >
            Very long tab name
          </div>
        </div>
      </button>
      <button
        aria-disabled="false"
        aria-selected="false"
        class="emotion-2 emotion-3"
        data-is-selected="false"
        role="tab"
        type="button"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-5"
          >
            Very long tab name
          </div>
        </div>
      </button>
      <div
        class="emotion-122 emotion-123"
      >
        <div
          aria-controls="menu-test"
          aria-describedby="menu-test"
          class="styles__w40vpo9"
          tabindex="-1"
        >
          <button
            aria-disabled="false"
            aria-expanded="true"
            aria-haspopup="dialog"
            class="emotion-124 emotion-125"
            role="tab"
            type="button"
          >
            Blabla
            <svg
              class="emotion-126 emotion-127 styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="emotion-122 emotion-123"
      >
        <div
          aria-controls="menu-«ro»"
          aria-describedby="menu-«ro»"
          class="styles__w40vpo9"
          tabindex="-1"
        >
          <button
            aria-disabled="false"
            aria-expanded="true"
            aria-haspopup="dialog"
            class="emotion-130 emotion-131 emotion-125"
            role="tab"
            type="button"
          >
            More
            <svg
              class="emotion-126 emotion-127 styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
  .emotion-0 {
  background-color: #ffffff;
  box-shadow: 0px 4px 8px 0px #22263829,0px 8px 24px 0px #2226383d;
  padding: 0;
  min-width: 11.25rem;
  max-width: 23.75rem;
  padding: 0.125rem 0;
}

.emotion-0[data-has-arrow='true']::after {
  border-color: #ffffff transparent transparent transparent;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: auto;
  overflow-x: hidden;
  max-height: calc(min(30rem, -24px) - 0.25rem);
  background-color: #ffffff;
  color: #3f4250;
  border-radius: 0.25rem;
  position: relative;
}

.emotion-2:after,
.emotion-2:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.emotion-2:after {
  border-color: transparent;
}

.emotion-2:before {
  border-color: transparent;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
}

.emotion-6 {
  border-bottom: 1px solid #d9dadd;
  padding: 0.25rem 0.25rem;
  width: 100%;
}

.emotion-6:last-child {
  border: none;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  text-align: left;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
  max-height: 2.5rem;
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: inherit;
  padding: 0.25rem 0.5rem;
  border: none;
  cursor: pointer;
  min-width: 6.875rem;
  width: 100%;
  border-radius: 0.25rem;
  -webkit-transition: background-color 200ms,color 200ms;
  transition: background-color 200ms,color 200ms;
  color: #3f4250;
  background: none;
}

.emotion-9 svg {
  fill: #3f4250;
}

.emotion-9:hover,
.emotion-9:focus-visible,
.emotion-9[data-active='true'] {
  background-color: #e9eaeb;
  color: #222638;
}

.emotion-9:hover svg,
.emotion-9:focus-visible svg,
.emotion-9[data-active='true'] svg {
  fill: #222638;
}

.emotion-9[aria-selected='true'] {
  color: #641cb3;
}

<div
    class="emotion-0 emotion-1 styles__w40vpo4 null"
    id="menu-test"
    role="dialog"
    style="--ozfz3c0: -5px; --ozfz3c1: 0px; --ozfz3c2:  rotate(180deg); --ozfz3c4: translate3d(0px, 4px, 0); --ozfz3c5: 0ms; --ozfz3c6: translate3d(0px, 4px, 0); --ozfz3c7: 14.5rem; --ozfz3c3: 30rem; opacity: 1; animation: none;"
  >
    <div
      class="styles__w40vpo2 styles_hasMaxHeight_true__w40vpo3"
      style="--ozfz3c3: 30rem;"
    >
      <div
        class="emotion-2 emotion-3"
        role="menu"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-7"
          >
            <button
              class="emotion-8 emotion-9 emotion-10"
              data-active="false"
              data-is-disclosure="false"
              data-is-menu-item="true"
              role="menuitem"
              type="button"
            >
              Test
            </button>
          </div>
          <div
            class="emotion-6 emotion-7"
          >
            <button
              class="emotion-8 emotion-9 emotion-10"
              data-active="false"
              data-is-disclosure="false"
              data-is-menu-item="true"
              role="menuitem"
              type="button"
            >
              Test 2
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  .emotion-0 {
  background-color: #ffffff;
  box-shadow: 0px 4px 8px 0px #22263829,0px 8px 24px 0px #2226383d;
  padding: 0;
  min-width: 11.25rem;
  max-width: 23.75rem;
  padding: 0.125rem 0;
}

.emotion-0[data-has-arrow='true']::after {
  border-color: #ffffff transparent transparent transparent;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: auto;
  overflow-x: hidden;
  max-height: calc(min(30rem, -24px) - 0.25rem);
  background-color: #ffffff;
  color: #3f4250;
  border-radius: 0.25rem;
  position: relative;
}

.emotion-2:after,
.emotion-2:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.emotion-2:after {
  border-color: transparent;
}

.emotion-2:before {
  border-color: transparent;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-6 .emotion-9 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: inherit;
  padding: 0.5rem 1rem;
  border-bottom-width: 1.5px;
  width: 100%;
  cursor: pointer;
  min-width: 6.875rem;
  background-color: transparent;
}

.emotion-6 .emotion-9[aria-disabled='true'],
.emotion-6 .emotion-9:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0.5rem 1rem;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  white-space: nowrap;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
}

.emotion-8:hover,
.emotion-8:active,
.emotion-8:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.emotion-8:focus-visible {
  outline: auto;
}

.emotion-8[aria-selected='true'] {
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.emotion-8[aria-selected='true'] .e1hzf7cr3 {
  color: #641cb3;
}

.emotion-8[aria-disabled='false']:not(:disabled):hover,
.emotion-8[aria-disabled='false']:not(:disabled):focus,
.emotion-8[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.emotion-8[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .emotion-15,
.emotion-8[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .emotion-15,
.emotion-8[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .emotion-15 {
  background-color: #f1eefc;
  border-color: #f1eefc;
  color: #641cb3;
}

.emotion-8[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr3,
.emotion-8[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr3,
.emotion-8[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr3 {
  color: #641cb3;
}

.emotion-8[aria-disabled='true'],
.emotion-8:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-14 {
  padding: 0 0.5rem;
  margin-left: 0.5rem;
}

.emotion-52 {
  margin-left: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-128 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  bottom: 0;
  right: 0;
}

.emotion-130 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0.5rem 1rem;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  white-space: nowrap;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
}

.emotion-130:hover,
.emotion-130:active,
.emotion-130:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.emotion-130:focus-visible {
  outline: auto;
}

.emotion-130[aria-selected='true'] {
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.emotion-130[aria-selected='true'] .e1hzf7cr3 {
  color: #641cb3;
}

.emotion-130[aria-disabled='false']:not(:disabled):hover,
.emotion-130[aria-disabled='false']:not(:disabled):focus,
.emotion-130[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.emotion-130[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .emotion-15,
.emotion-130[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .emotion-15,
.emotion-130[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .emotion-15 {
  background-color: #f1eefc;
  border-color: #f1eefc;
  color: #641cb3;
}

.emotion-130[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr3,
.emotion-130[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr3,
.emotion-130[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr3 {
  color: #641cb3;
}

.emotion-130[aria-disabled='true'],
.emotion-130:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.emotion-130 .emotion-133 {
  color: inherit;
  margin-left: 0.5rem;
  -webkit-transition: 300ms -webkit-transform ease-out;
  transition: 300ms transform ease-out;
}

.emotion-130[aria-expanded='true'] .emotion-133 {
  -webkit-transform: rotate(-180deg);
  -moz-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

<div
    class="emotion-0 emotion-1 styles__w40vpo4 null"
    id="menu-«ro»"
    role="dialog"
    style="--ozfz3c0: -5px; --ozfz3c1: 0px; --ozfz3c2:  rotate(180deg); --ozfz3c4: translate3d(0px, 4px, 0); --ozfz3c5: 0ms; --ozfz3c6: translate3d(0px, 4px, 0); --ozfz3c7: 14.5rem; --ozfz3c3: 30rem; opacity: 1; animation: none;"
  >
    <div
      class="styles__w40vpo2 styles_hasMaxHeight_true__w40vpo3"
      style="--ozfz3c3: 30rem;"
    >
      <div
        class="emotion-2 emotion-3"
        role="menu"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-7"
          >
            <button
              aria-disabled="false"
              aria-selected="true"
              class="emotion-8 emotion-9"
              data-is-selected="true"
              role="tab"
              type="button"
            >
              <div
                class="emotion-10 emotion-11"
              >
                <div
                  class="emotion-12 emotion-11"
                >
                  First
                  <span
                    class="emotion-14 emotion-15 styles__1yf71jy0 styles_size_medium__1yf71jy2 styles_prominence_strong__1yf71jye styles_sentiment_primary__1yf71jy4 styles_undefined_compound_7__1yf71jyn style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
                    style="--qabug41: nowrap;"
                  >
                    2
                  </span>
                </div>
              </div>
            </button>
            <button
              aria-disabled="false"
              aria-label="1"
              aria-selected="false"
              class="emotion-8 emotion-9"
              data-is-selected="false"
              role="tab"
              type="button"
            >
              <div
                class="emotion-10 emotion-11"
              >
                <div
                  class="emotion-12 emotion-11"
                >
                  Second
                </div>
              </div>
            </button>
            <button
              aria-disabled="false"
              aria-selected="false"
              class="emotion-8 emotion-9"
              data-is-selected="false"
              role="tab"
              type="button"
            >
              <div
                class="emotion-10 emotion-11"
              >
                <div
                  class="emotion-12 emotion-11"
                >
                  Undefined
                </div>
              </div>
            </button>
            <button
              aria-disabled="false"
              aria-selected="false"
              class="emotion-8 emotion-9"
              data-is-selected="false"
              role="tab"
              type="button"
            >
              <div
                class="emotion-10 emotion-11"
              >
                <div
                  class="emotion-12 emotion-11"
                >
                  Counter
                  <span
                    class="emotion-14 emotion-15 styles__1yf71jy0 styles_size_medium__1yf71jy2 styles_prominence_default__1yf71jyd styles_sentiment_neutral__1yf71jya styles_undefined_compound_6__1yf71jym style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
                    style="--qabug41: nowrap;"
                  >
                    12
                  </span>
                </div>
              </div>
            </button>
            <button
              aria-disabled="false"
              aria-label="2"
              aria-selected="false"
              class="emotion-8 emotion-9"
              data-is-selected="false"
              role="tab"
              type="button"
            >
              <div
                class="emotion-10 emotion-11"
              >
                <div
                  class="emotion-12 emotion-11"
                >
                  Counter no items
                  <span
                    class="emotion-14 emotion-15 styles__1yf71jy0 styles_size_medium__1yf71jy2 styles_prominence_default__1yf71jyd styles_sentiment_neutral__1yf71jya styles_undefined_compound_6__1yf71jym style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
                    style="--qabug41: nowrap;"
                  >
                    0
                  </span>
                </div>
              </div>
            </button>
            <button
              aria-disabled="false"
              aria-selected="false"
              class="emotion-8 emotion-9"
              data-is-selected="false"
              role="tab"
              type="button"
            >
              <div
                class="emotion-10 emotion-11"
              >
                <div
                  class="emotion-12 emotion-11"
                >
                  Conter and badge
                  <span
                    class="emotion-14 emotion-15 styles__1yf71jy0 styles_size_medium__1yf71jy2 styles_prominence_default__1yf71jyd styles_sentiment_neutral__1yf71jya styles_undefined_compound_6__1yf71jym style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
                    style="--qabug41: nowrap;"
                  >
                    12
                  </span>
                  <span
                    class="emotion-52 emotion-53"
                  >
                    Badge
                  </span>
                </div>
              </div>
            </button>
            <button
              aria-disabled="false"
              aria-selected="false"
              class="emotion-8 emotion-9"
              data-is-selected="false"
              role="tab"
              type="button"
            >
              <div
                class="emotion-10 emotion-11"
              >
                <div
                  class="emotion-12 emotion-11"
                >
                  Badge
                  <span
                    class="emotion-52 emotion-53"
                  >
                    Badge
                  </span>
                </div>
              </div>
            </button>
            <button
              aria-disabled="false"
              aria-selected="false"
              class="emotion-8 emotion-9"
              data-is-selected="false"
              role="tab"
              type="button"
            >
              <div
                class="emotion-10 emotion-11"
              >
                <div
                  class="emotion-12 emotion-11"
                >
                  Very long tab name
                </div>
              </div>
            </button>
            <button
              aria-disabled="false"
              aria-selected="false"
              class="emotion-8 emotion-9"
              data-is-selected="false"
              role="tab"
              type="button"
            >
              <div
                class="emotion-10 emotion-11"
              >
                <div
                  class="emotion-12 emotion-11"
                >
                  Very long tab name
                </div>
              </div>
            </button>
            <button
              aria-disabled="false"
              aria-selected="false"
              class="emotion-8 emotion-9"
              data-is-selected="false"
              role="tab"
              type="button"
            >
              <div
                class="emotion-10 emotion-11"
              >
                <div
                  class="emotion-12 emotion-11"
                >
                  Very long tab name
                </div>
              </div>
            </button>
            <button
              aria-disabled="false"
              aria-selected="false"
              class="emotion-8 emotion-9"
              data-is-selected="false"
              role="tab"
              type="button"
            >
              <div
                class="emotion-10 emotion-11"
              >
                <div
                  class="emotion-12 emotion-11"
                >
                  Very long tab name
                </div>
              </div>
            </button>
            <button
              aria-disabled="false"
              aria-selected="false"
              class="emotion-8 emotion-9"
              data-is-selected="false"
              role="tab"
              type="button"
            >
              <div
                class="emotion-10 emotion-11"
              >
                <div
                  class="emotion-12 emotion-11"
                >
                  Very long tab name
                </div>
              </div>
            </button>
            <button
              aria-disabled="false"
              aria-selected="false"
              class="emotion-8 emotion-9"
              data-is-selected="false"
              role="tab"
              type="button"
            >
              <div
                class="emotion-10 emotion-11"
              >
                <div
                  class="emotion-12 emotion-11"
                >
                  Very long tab name
                </div>
              </div>
            </button>
            <button
              aria-disabled="false"
              aria-selected="false"
              class="emotion-8 emotion-9"
              data-is-selected="false"
              role="tab"
              type="button"
            >
              <div
                class="emotion-10 emotion-11"
              >
                <div
                  class="emotion-12 emotion-11"
                >
                  Very long tab name
                </div>
              </div>
            </button>
            <button
              aria-disabled="false"
              aria-selected="false"
              class="emotion-8 emotion-9"
              data-is-selected="false"
              role="tab"
              type="button"
            >
              <div
                class="emotion-10 emotion-11"
              >
                <div
                  class="emotion-12 emotion-11"
                >
                  Very long tab name
                </div>
              </div>
            </button>
            <button
              aria-disabled="false"
              aria-selected="false"
              class="emotion-8 emotion-9"
              data-is-selected="false"
              role="tab"
              type="button"
            >
              <div
                class="emotion-10 emotion-11"
              >
                <div
                  class="emotion-12 emotion-11"
                >
                  Very long tab name
                </div>
              </div>
            </button>
            <button
              aria-disabled="false"
              aria-selected="false"
              class="emotion-8 emotion-9"
              data-is-selected="false"
              role="tab"
              type="button"
            >
              <div
                class="emotion-10 emotion-11"
              >
                <div
                  class="emotion-12 emotion-11"
                >
                  Very long tab name
                </div>
              </div>
            </button>
            <button
              aria-disabled="false"
              aria-selected="false"
              class="emotion-8 emotion-9"
              data-is-selected="false"
              role="tab"
              type="button"
            >
              <div
                class="emotion-10 emotion-11"
              >
                <div
                  class="emotion-12 emotion-11"
                >
                  Very long tab name
                </div>
              </div>
            </button>
            <div
              class="emotion-128 emotion-129"
            >
              <div
                aria-controls="menu-test"
                aria-describedby="menu-test"
                class="styles__w40vpo9"
                tabindex="-1"
              >
                <button
                  aria-disabled="false"
                  aria-expanded="true"
                  aria-haspopup="dialog"
                  class="emotion-130 emotion-131"
                  role="tab"
                  type="button"
                >
                  Blabla
                  <svg
                    class="emotion-132 emotion-133 styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa"
                    viewBox="0 0 16 16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  .emotion-0 {
  background-color: #ffffff;
  box-shadow: 0px 4px 8px 0px #22263829,0px 8px 24px 0px #2226383d;
  padding: 0;
  min-width: 11.25rem;
  max-width: 23.75rem;
  padding: 0.125rem 0;
}

.emotion-0[data-has-arrow='true']::after {
  border-color: #ffffff transparent transparent transparent;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: auto;
  overflow-x: hidden;
  max-height: calc(min(30rem, -24px) - 0.25rem);
  background-color: #ffffff;
  color: #3f4250;
  border-radius: 0.25rem;
  position: relative;
}

.emotion-2:after,
.emotion-2:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.emotion-2:after {
  border-color: transparent;
}

.emotion-2:before {
  border-color: transparent;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
}

.emotion-6 {
  border-bottom: 1px solid #d9dadd;
  padding: 0.25rem 0.25rem;
  width: 100%;
}

.emotion-6:last-child {
  border: none;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  text-align: left;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
  max-height: 2.5rem;
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: inherit;
  padding: 0.25rem 0.5rem;
  border: none;
  cursor: pointer;
  min-width: 6.875rem;
  width: 100%;
  border-radius: 0.25rem;
  -webkit-transition: background-color 200ms,color 200ms;
  transition: background-color 200ms,color 200ms;
  color: #3f4250;
  background: none;
}

.emotion-9 svg {
  fill: #3f4250;
}

.emotion-9:hover,
.emotion-9:focus-visible,
.emotion-9[data-active='true'] {
  background-color: #e9eaeb;
  color: #222638;
}

.emotion-9:hover svg,
.emotion-9:focus-visible svg,
.emotion-9[data-active='true'] svg {
  fill: #222638;
}

.emotion-9[aria-selected='true'] {
  color: #641cb3;
}

<div
    class="emotion-0 emotion-1 styles__w40vpo4 null"
    id="menu-test"
    role="dialog"
    style="--ozfz3c0: 0px; --ozfz3c1: -5px; --ozfz3c2: translate(50%, -50%) rotate(90deg); --ozfz3c4: translate3d(8px, 0px, 0); --ozfz3c5: 0ms; --ozfz3c6: translate3d(8px, 0px, 0); --ozfz3c7: 14.5rem; --ozfz3c3: 30rem; opacity: 1; animation: none;"
  >
    <div
      class="styles__w40vpo2 styles_hasMaxHeight_true__w40vpo3"
      style="--ozfz3c3: 30rem;"
    >
      <div
        class="emotion-2 emotion-3"
        role="menu"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-7"
          >
            <button
              class="emotion-8 emotion-9 emotion-10"
              data-active="false"
              data-is-disclosure="false"
              data-is-menu-item="true"
              role="menuitem"
              type="button"
            >
              Test
            </button>
          </div>
          <div
            class="emotion-6 emotion-7"
          >
            <button
              class="emotion-8 emotion-9 emotion-10"
              data-active="false"
              data-is-disclosure="false"
              data-is-menu-item="true"
              role="menuitem"
              type="button"
            >
              Test 2
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tabs > renders correctly with custom Tabs component 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: scroll;
  position: relative;
  z-index: 0;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.emotion-0::after {
  z-index: -1;
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 2px;
  background: #d9dadd;
}

.emotion-0::-webkit-scrollbar {
  display: none;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: scroll;
  position: relative;
  z-index: 0;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.emotion-0::after {
  z-index: -1;
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 2px;
  background: #d9dadd;
}

.emotion-0::-webkit-scrollbar {
  display: none;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0.5rem 1rem;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  white-space: nowrap;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
}

.emotion-2:hover,
.emotion-2:active,
.emotion-2:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.emotion-2:focus-visible {
  outline: auto;
}

.emotion-2[aria-selected='true'] {
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.emotion-2[aria-selected='true'] .e1hzf7cr3 {
  color: #641cb3;
}

.emotion-2[aria-disabled='false']:not(:disabled):hover,
.emotion-2[aria-disabled='false']:not(:disabled):focus,
.emotion-2[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.emotion-2[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr4,
.emotion-2[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr4,
.emotion-2[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr4 {
  background-color: #f1eefc;
  border-color: #f1eefc;
  color: #641cb3;
}

.emotion-2[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr3,
.emotion-2[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr3,
.emotion-2[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr3 {
  color: #641cb3;
}

.emotion-2[aria-disabled='true'],
.emotion-2:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0.5rem 1rem;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  white-space: nowrap;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
}

.emotion-2:hover,
.emotion-2:active,
.emotion-2:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.emotion-2:focus-visible {
  outline: auto;
}

.emotion-2[aria-selected='true'] {
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.emotion-2[aria-selected='true'] .e1hzf7cr3 {
  color: #641cb3;
}

.emotion-2[aria-disabled='false']:not(:disabled):hover,
.emotion-2[aria-disabled='false']:not(:disabled):focus,
.emotion-2[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.emotion-2[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr4,
.emotion-2[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr4,
.emotion-2[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr4 {
  background-color: #f1eefc;
  border-color: #f1eefc;
  color: #641cb3;
}

.emotion-2[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr3,
.emotion-2[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr3,
.emotion-2[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr3 {
  color: #641cb3;
}

.emotion-2[aria-disabled='true'],
.emotion-2:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-15 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #005da3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 0.5rem;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: 0;
  text-case: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0.5rem 1rem;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  white-space: nowrap;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
}

.emotion-15 .e1afnb7a3,
.emotion-15 .e1afnb7a2,
.emotion-15 .e1afnb7a4 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-15>* {
  pointer-events: none;
}

.emotion-15:visited {
  text-decoration-color: transparent;
  color: #641cb3;
}

.emotion-15:hover,
.emotion-15:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #004c85;
  text-decoration-color: #004c85;
}

.emotion-15:hover .e1afnb7a3,
.emotion-15:focus .e1afnb7a3,
.emotion-15:hover .e1afnb7a2,
.emotion-15:focus .e1afnb7a2,
.emotion-15:hover .e1afnb7a4,
.emotion-15:focus .e1afnb7a4 {
  -webkit-transform: translate(-0.125rem, 0);
  -moz-transform: translate(-0.125rem, 0);
  -ms-transform: translate(-0.125rem, 0);
  transform: translate(-0.125rem, 0);
}

.emotion-15:hover:visited,
.emotion-15:focus:visited {
  text-decoration-color: transparent;
  color: #641cb3;
}

.emotion-15[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-15:hover::after,
.emotion-15:focus::after {
  background-color: #005da3;
}

.emotion-15:active {
  text-decoration-thickness: 2px;
}

.emotion-15:hover,
.emotion-15:active,
.emotion-15:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.emotion-15:focus-visible {
  outline: auto;
}

.emotion-15[aria-selected='true'] {
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.emotion-15[aria-selected='true'] .e1hzf7cr3 {
  color: #641cb3;
}

.emotion-15[aria-disabled='false']:not(:disabled):hover,
.emotion-15[aria-disabled='false']:not(:disabled):focus,
.emotion-15[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.emotion-15[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr4,
.emotion-15[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr4,
.emotion-15[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr4 {
  background-color: #f1eefc;
  border-color: #f1eefc;
  color: #641cb3;
}

.emotion-15[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr3,
.emotion-15[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr3,
.emotion-15[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr3 {
  color: #641cb3;
}

.emotion-15[aria-disabled='true'],
.emotion-15:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      role="tablist"
    >
      <div
        aria-disabled="false"
        aria-selected="false"
        class="emotion-2 emotion-3"
        data-is-selected="false"
        role="tab"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-5"
          >
            First
          </div>
        </div>
      </div>
      <a
        aria-disabled="false"
        aria-selected="false"
        class="emotion-2 emotion-3"
        data-is-selected="false"
        role="tab"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-5"
          >
            Second
          </div>
        </div>
      </a>
      <a
        class="emotion-3 emotion-15 emotion-16"
        data-variant="standalone"
        href="#"
        variant="bodyStrong"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-5"
          >
            Very long tab name
          </div>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;
